--- a/help.html
+++ b/help.html
@@ -236,7 +236,7 @@
         <input
           type="hidden"
           name="_redirect"
-          value="https://enter-code-password.vercel.app/"
+          value=""
         />
 
         <div class="form-group">
